objects/vlocity_cmt__OpportunityDiscountItem__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__CatalogCategoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog Category</label>
        <referenceTo>vlocity_cmt__Catalog__c</referenceTo>
        <relationshipLabel>Opportunity Discount Items</relationshipLabel>
        <relationshipName>OpportunityDiscountItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OpportunityDiscountId__c</fullName>
        <label>Opportunity Discount</label>
        <referenceTo>vlocity_cmt__OpportunityDiscount__c</referenceTo>
        <relationshipLabel>Opportunity Discount Items</relationshipLabel>
        <relationshipName>OpportunityDiscountItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Discount Items</relationshipLabel>
        <relationshipName>OpportunityDiscountItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opportunity Discount Item</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Discount Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>